--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,21 +6,20 @@
 		<meta http-equiv="expires" content="0" />
 		<meta charset="utf-8" />
 
-		<title>UI5 Application: br.com.bioindica</title>
+		<title>Bioindica</title>
 
 		<script
 			id="sap-ui-bootstrap"
-			src="resources/sap-ui-core.js"
+			src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-resourceroots='{
 				"br.com.bioindica": "./"
 			}'
-			data-sap-ui-theme="sap_horizon"
+			data-sap-ui-theme="sap_horizon, sap_horizon_dark"
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-async="true"
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-frameOptions="trusted"
 			data-sap-ui-xx-waitForTheme="true"
-			data-sap-ui-xx-supportedLanguages="en,de"
 		></script>
 	</head>
 
